src/snapshots/brooks_ics__test__cli_tests__domain_feature_test.snap
---
source: src/test.rs
info:
  program: brooks-ics
  args:
    - hmds
    - "--port"
    - "8081"
    - "--timeout"
    - 25s
    - "--user"
    - testing_user
---
success: true
exit_code: 0
----- stdout -----
Error: Interconnection server error: Cannot find information about user testing_user
Usage: [BROOKS_ICS] [OPTIONS] <COMMAND>

Commands:
  proxy  
  echo   
  hmds   
  help   Print this message or the help of the given subcommand(s)

Options:
      --debug...             
      --log-file <LOG_FILE>  
  -h, --help                 Print help


----- stderr -----
