src/snapshots/brooks_ics__test__cli_tests__help_test.snap
---
source: src/test.rs
info:
  program: brooks-ics
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Usage: [BROOKS_ICS] [OPTIONS] <COMMAND>

Commands:
  proxy  
  echo   
  hmds   
  help   Print this message or the help of the given subcommand(s)

Options:
      --debug...             
      --log-file <LOG_FILE>  
  -h, --help                 Print help

----- stderr -----
