src/snapshots/brooks_ics__test__cli_tests__no_domain_feature_test.snap
---
source: src/test.rs
info:
  program: brooks-ics
  args:
    - hmds
    - "--port"
    - "8081"
    - "--timeout"
    - 25s
    - "--user"
    - testing_user
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unexpected argument '--user' found

Usage: [BROOKS_ICS] hmds --port <PORT> --timeout <TIMEOUT>

For more information, try '--help'.
